--- a/templates/result.html
+++ b/templates/result.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>Review Page</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-
-      <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 
 <body>
-
   <div class="table-users">
-   <div class="header">Reviews</div>
-
-   <table cellspacing="0">
+    <div class="header">Reviews</div>
+    <table cellspacing="0">
       <tr>
-         <th>Product</th>
-         <th>Name</th>
-         <th>Rating</th>
-         <th>Comment Heading</th>
-         <th>mycomment </th>
-         <th width="230">Comments</th>
+        <th>Image_Link</th>
+        <th>Name_of_dress</th>
+        <th>Fabric</th>
+        <th>Amount</th>
+        <th>Country_of_origin </th>
       </tr>
-         {% for review in reviews %}
+      {% for review in reviews %}
       <tr>
-          <td>{{review['Product']}}</td>
-         <td>{{review['Name']}}</td>
-         <td>{{review['Rating']}}</td>
-         <td>{{review['CommentHead']}}</td>
-         <td>{{review['Comment']}} </td>
-         <td>{{review['Comment']}} </td>
-       {% endfor %}
-   </table>
-</div>
-
-
-
+        <td>{{ review['images_'] }}</td>
+        <td>{{ review['name'] }}</td>
+        <td>{{ review['fabric'] }}</td>
+        <td>{{ review['amount'] }}</td>
+        <td>{{ review['Country_of_origin'] }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
 </body>
 
 </html>
